// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HowToGetPledges Snapshop test for HowToGetPledges 1`] = `
<div class="card-content">
  <div>
    <div class="pb-4">
      <figure class="image is-16by9 mb-4 border">
        <!---->
      </figure>
    </div>
    <h4 class="font-bold text-lg text-center md:text-left mb-4">
      asking for pledges
    </h4>
    <ul class="list-reset text-sm md:text-xl">
      <li class="flex items-center mb-2">
        <routerlink-stub to="[object Object]" tag="a" event="click" strict="" class="font-semibold underline">
          <sharesvgicon-stub type="email"></sharesvgicon-stub>
        </routerlink-stub>
        <p class="ml-4">
          <routerlink-stub to="[object Object]" tag="a" event="click" strict="" class="font-semibold underline">
            link
          </routerlink-stub> paragraph
        </p>
      </li>
      <li class="flex items-center mb-2"><button>
          <sharesvgicon-stub type="facebook"></sharesvgicon-stub>
        </button>
        <p class="ml-4"><a class="font-semibold underline">
            share on facebook
          </a> get sponsor pledges
        </p>
      </li>
      <li class="flex items-center mb-2"><a href="#">
          <sharesvgicon-stub type="ssv"></sharesvgicon-stub>
        </a>
        <p class="ml-4"><a href="#" class="font-semibold underline">
            share ssv
          </a> customize it
        </p>
      </li>
      <li class="flex items-center mb-2"><a href="#" class="phone-script-icon">
          <sharesvgicon-stub type="script"></sharesvgicon-stub>
        </a>
        <p class="ml-4"><a href="#" class="font-semibold underline phone-script-link">
            use our phone script
          </a> call friends
        </p>
      </li>
    </ul>
  </div>
</div>
`;

exports[`HowToGetPledges Snapshop test for HowToGetPledges with ssv disabled 1`] = `
<div class="card-content">
  <div>
    <div class="pb-4">
      <figure class="image is-16by9 mb-4 border">
        <!---->
      </figure>
    </div>
    <h4 class="font-bold text-lg text-center md:text-left mb-4">
      asking for pledges
    </h4>
    <ul class="list-reset text-sm md:text-xl">
      <li class="flex items-center mb-2">
        <routerlink-stub to="[object Object]" tag="a" event="click" strict="" class="font-semibold underline">
          <sharesvgicon-stub type="email"></sharesvgicon-stub>
        </routerlink-stub>
        <p class="ml-4">
          <routerlink-stub to="[object Object]" tag="a" event="click" strict="" class="font-semibold underline">
            link
          </routerlink-stub> paragraph
        </p>
      </li>
      <li class="flex items-center mb-2"><button>
          <sharesvgicon-stub type="facebook"></sharesvgicon-stub>
        </button>
        <p class="ml-4"><a class="font-semibold underline">
            share on facebook
          </a> get sponsor pledges
        </p>
      </li>
      <!---->
      <li class="flex items-center mb-2"><a href="#" class="phone-script-icon">
          <sharesvgicon-stub type="script"></sharesvgicon-stub>
        </a>
        <p class="ml-4"><a href="#" class="font-semibold underline phone-script-link">
            use our phone script
          </a> call friends
        </p>
      </li>
    </ul>
  </div>
</div>
`;
